--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -6,3 +6,5 @@
 <link rel="stylesheet" href="/static/css/style.css" />
 <link rel="stylesheet" href="/static/css/login.css" />
 <title>Inicio</title>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6633654530665325"
+     crossorigin="anonymous"></script>
