--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -53,6 +53,9 @@
                 </div>
                 <div class="text-center">
                     <button type="submit" class="btn btn-success btn-lg">Iniciar Sesión</button>
+                    <a href="/auth/google" class="btn btn-danger">Iniciar sesión con Google</a>
+                    <a href="/auth/facebook" class="btn btn-primary">Iniciar sesión con Facebook</a>
+                    <a href="/auth/github" class="btn btn-dark">Iniciar sesión con GitHub</a>
                 </div>
                 <div class="text-center mt-1">
                     <a href="/registrarse" class="small">¿No tienes una cuenta? <strong>Inscríbete</strong></a>
